--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 </head>
 <body>
     <header class="header">
-        <div class="container">
+        <div class="container header-container">
             <a href="index.html" class="header-logo link"> <span class="header-logo">Web</span>Studio</a>
             <nav class="header-nav">
                 <ul class="header-list list">
@@ -25,7 +25,7 @@
                     <li><a href="" class="header-link link">Контакти</a></li>
                 </ul>
             </nav>
-            <ul class="list">
+            <ul class="contacts-list list">
                 <li><a href="mailto:info@devstudio.com" class="header-mail link">info@devstudio.com</a></li>
                 <li><a href="tel:+380961111111" class="header-tel link">+38 096 111 11 11</a></li>
             </ul>
@@ -34,7 +34,7 @@
     <main>
         <section class="decision section">
             <div class="container">
-                <h1 class="decision-heading">Ефективні рішення для вашого бізнесу</h1>
+                <h1 class="decision-heading">Ефективні рішення  для <br> вашого бізнесу</h1>
                 <button type="button" class="btn">Замовити послугу</button>
             </div>
         </section>
@@ -43,19 +43,19 @@
             <div class="container">
                 <h2 class="visually-hidden">переваги</h2>
                 <ul class="benefits-list list">
-                    <li>
+                    <li class="benefits-element">
                         <h3 class="benefit-heading">УВАГА ДО ДЕТАЛЕЙ</h3>
                         <p class="subtitle">Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.</p>
                     </li>
-                    <li>
+                    <li class="benefits-element">
                         <h3 class="benefit-heading">ПУНКТУАЛЬНІСТЬ</h3>
                         <p class="subtitle">Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.</p>
                     </li>
-                    <li>
+                    <li class="benefits-element">
                         <h3 class="benefit-heading">ПЛАНУВАННЯ</h3>
                         <p class="subtitle"> Так само консультація з широким активом значною мірою зумовлює.</p>
                     </li>
-                    <li>
+                    <li class="benefits-element">
                         <h3 class="benefit-heading">СУЧАСНІ ТЕХНОЛОГІЇ</h3>
                         <p class="subtitle">Значимість цих проблем настільки очевидна, що реалізація планових завдань.</p>
                     </li>
@@ -68,7 +68,7 @@
 
                 <h2 class="work-heading heading">Чим ми займаємося</h2>
                 <ul class="work-list list"> 
-                    <li>
+                    <li class="work-element">
                         <img 
                             src="./img/img.jpg"
                             alt="Десктопні додатки"
@@ -76,7 +76,7 @@
                             class=""
                         />
                     </li>
-                    <li>
+                    <li class="work-element">
                         <img
                             src="./img/img1.jpg"
                             alt="мобільні додатки"
@@ -84,7 +84,7 @@
                             class=""
                         />
                     </li>
-                    <li>
+                    <li class="work-element">
                         <img
                             src="./img/img2.jpg"
                             alt="дизайнерські рішення"
@@ -102,22 +102,22 @@
             <div class="container">
                 <h2 class="team-heading heading">Наша команда</h2>
                 <ul class="team-list list">
-                    <li>
+                    <li class="team-element">
                         <img src="./img/img3.jpg" alt="Ігор Дем'яненко" width="270">
                         <h3 class="headline">Ігор Дем'яненко</h3>
                         <p class="team-subtitle">Product Designer</p>
                     </li>
-                    <li>
+                    <li class="team-element">
                         <img src="./img/img4.jpg" alt="Ольга Рєпіна" width="270">
                         <h3 class="headline">Ольга Рєпіна</h3>
                         <p class="team-subtitle">Frontend Developer</p>
                     </li>
-                    <li>
+                    <li class="team-element">
                         <img src="./img/img5.jpg" alt="Микола Тарасов" width="270">
                         <h3 class="headline">Микола Тарасов</h3>
                         <p class="team-subtitle">Marketing</p>
                     </li>
-                    <li>
+                    <li class="team-element">
                         <img src="./img/img6.jpg" alt="Михайло Єрмаков" width="270">
                         <h3 class="headline">Михайло Єрмаков</h3>
                         <p class="team-subtitle">UI Designer</p>
@@ -131,10 +131,10 @@
         <div class="container">
             <a href="index.html" class="footer-logo link"> <span class="footer-logo">Web</span>Studio</a>
             <address class="footer-address">
-                <ul class="list">
-                    <li><a href="https://goo.gl/maps/XC93UawWn5YDiqj28" target="_blank" rel="noopeneer noreferrer nofollow" class="footer-addres link">м. Київ, пр-т Лесі Українки, 26</a></li>
-                    <li><a href="mailto:info@devstudio.com" class="footer-mail-tel  link">info@devstudio.com</a></li>
-                    <li><a href="tel:+380961111111" class="footer-mail-tel link">+38 096 111 11 11</a></li>
+                <ul class="list footer-list">
+                    <li class="footer-element"><a href="https://goo.gl/maps/XC93UawWn5YDiqj28" target="_blank" rel="noopeneer noreferrer nofollow" class="footer-addres link">м. Київ, пр-т Лесі Українки, 26</a></li>
+                    <li class="footer-element"><a href="mailto:info@devstudio.com" class="footer-mail-tel  link">info@devstudio.com</a></li>
+                    <li class="footer-element"><a href="tel:+380961111111" class="footer-mail-tel link">+38 096 111 11 11</a></li>
                 </ul>
             </address>
         </div>
