--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                             src="./img/img.jpg"
                             alt="Десктопні додатки"
                             width="370" 
-                            class=""
+                            class="work-img"
                         />
                     </li>
                     <li class="work-element">
@@ -81,7 +81,7 @@
                             src="./img/img1.jpg"
                             alt="мобільні додатки"
                             width="370"
-                            class=""
+                            class="work-img"
                         />
                     </li>
                     <li class="work-element">
@@ -89,7 +89,7 @@
                             src="./img/img2.jpg"
                             alt="дизайнерські рішення"
                             width="370"
-                            class=""
+                            class="work-img"
                         />
                     </li>
             </ul>
@@ -103,24 +103,32 @@
                 <h2 class="team-heading heading">Наша команда</h2>
                 <ul class="team-list list">
                     <li class="team-element">
-                        <img src="./img/img3.jpg" alt="Ігор Дем'яненко" width="270">
-                        <h3 class="headline">Ігор Дем'яненко</h3>
-                        <p class="team-subtitle">Product Designer</p>
+                        <img src="./img/img3.jpg" alt="Ігор Дем'яненко" width="270" class="team-img">
+                        <div class="team-inform">
+                            <h3 class="headline">Ігор Дем'яненко</h3>
+                            <p class="team-subtitle">Product Designer</p>
+                        </div>
                     </li>
                     <li class="team-element">
-                        <img src="./img/img4.jpg" alt="Ольга Рєпіна" width="270">
-                        <h3 class="headline">Ольга Рєпіна</h3>
-                        <p class="team-subtitle">Frontend Developer</p>
+                        <img src="./img/img4.jpg" alt="Ольга Рєпіна" width="270" class="team-img">
+                        <div class="team-inform">
+                            <h3 class="headline">Ольга Рєпіна</h3>
+                            <p class="team-subtitle">Frontend Developer</p>
+                        </div>
                     </li>
                     <li class="team-element">
-                        <img src="./img/img5.jpg" alt="Микола Тарасов" width="270">
-                        <h3 class="headline">Микола Тарасов</h3>
-                        <p class="team-subtitle">Marketing</p>
+                        <img src="./img/img5.jpg" alt="Микола Тарасов" width="270" class="team-img">
+                        <div class="team-inform">
+                            <h3 class="headline">Микола Тарасов</h3>
+                            <p class="team-subtitle">Marketing</p>
+                        </div>
                     </li>
                     <li class="team-element">
-                        <img src="./img/img6.jpg" alt="Михайло Єрмаков" width="270">
-                        <h3 class="headline">Михайло Єрмаков</h3>
-                        <p class="team-subtitle">UI Designer</p>
+                        <img src="./img/img6.jpg" alt="Михайло Єрмаков" width="270" class="team-img">
+                        <div class="team-inform">
+                            <h3 class="headline">Михайло Єрмаков</h3>
+                            <p class="team-subtitle">UI Designer</p>
+                        </div>
                     </li>
                 </ul>
             </div>
