--- a/portfolio.html
+++ b/portfolio.html
@@ -20,8 +20,8 @@
             <a href="index.html" class="header-logo link"> <span class="header-logo">Web</span>Studio</a>
             <nav class="header-nav">
                 <ul class="header-list list">
-                    <li><a href="index.html" class="header-link header-link-active link">Студія</a></li>
-                    <li><a href="portfolio.html" class="header-link link">Портфоліо</a></li>
+                    <li><a href="index.html" class="header-link  link">Студія</a></li>
+                    <li><a href="portfolio.html" class="header-link  header-link-active link">Портфоліо</a></li>
                     <li><a href="" class="header-link link">Контакти</a></li>
                 </ul>
             </nav>
@@ -38,11 +38,11 @@
                 <h1 class="visually-hidden">портфоліо</h1>
 
                 <ul class="button-list list">
-                    <li><button type="button"  class="portfolio-btn">Усі</button></li>
-                    <li><button type="button"  class="portfolio-btn">Веб-сайти</button></li>
-                    <li><button type="button"  class="portfolio-btn">Додатки</button></li>
-                    <li><button type="button"  class="portfolio-btn">Дизайн</button></li>
-                    <li><button type="button"  class="portfolio-btn">Маркетинг</button></li>
+                    <li class="button-element"><button type="button"  class="portfolio-btn">Усі</button></li>
+                    <li class="button-element"><button type="button"  class="portfolio-btn">Веб-сайти</button></li>
+                    <li class="button-element"><button type="button"  class="portfolio-btn">Додатки</button></li>
+                    <li class="button-element"><button type="button"  class="portfolio-btn">Дизайн</button></li>
+                    <li class="button-element"><button type="button"  class="portfolio-btn">Маркетинг</button></li>
                 </ul>
             
         
