--- a/portfolio.html
+++ b/portfolio.html
@@ -20,14 +20,16 @@
             <a href="index.html" class="header-logo link"> <span class="header-logo">Web</span>Studio</a>
             <nav class="header-nav">
                 <ul class="header-list list">
-                    <li><a href="index.html" class="header-link  link">Студія</a></li>
-                    <li><a href="portfolio.html" class="header-link  header-link-active link">Портфоліо</a></li>
-                    <li><a href="" class="header-link link">Контакти</a></li>
+                    <li class="header-element"><a href="index.html" class="header-link  link">Студія</a>
+                    </li>
+                    <li class="header-element"><a href="portfolio.html" class="header-link header-link-active link">Портфоліо</a></li>
+                    <li class="header-element"><a href="" class="header-link link">Контакти</a></li>
                 </ul>
             </nav>
             <ul class="contacts-list list">
-                <li><a href="mailto:info@devstudio.com" class="header-mail link">info@devstudio.com</a></li>
-                <li><a href="tel:+380961111111" class="header-tel link">+38 096 111 11 11</a></li>
+                <li class="contacts-element"><a href="mailto:info@devstudio.com"
+                        class="header-mail link">info@devstudio.com</a></li>
+                <li class="contacts-element"><a href="tel:+380961111111" class="header-tel link">+38 096 111 11 11</a></li>
             </ul>
         </div>
     </header>
